builds cli with args

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,10 @@
 name = "gremlin"
 version = "0.1.0"
 edition = "2021"
+authors = ["Alexander Garcia <alexander.schmidt.garcia@gmail.com"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = "3"
 regex = "1"
